--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,7 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family: "Intro Bold Alt", Arial, sans-serif;
+  box-sizing: border-box;
 }
+
